unpackaged/main/default/objects/Integration__mdt/fields/Base_SObject__c.field-meta.xml
<CustomField>
    <fullName>Base_SObject__c</fullName>
    <label>Base SObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Integrations</relationshipLabel>
    <relationshipName>Integrations</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>