unpackaged/main/default/objects/Integration__mdt/fields/Debugging__c.field-meta.xml
<CustomField>
    <fullName>Debugging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debugging?</label>
    <type>Checkbox</type>
</CustomField>