unpackaged/main/default/objects/Integration__mdt/fields/Log_Days_to_Keep__c.field-meta.xml
<CustomField>
    <fullName>Log_Days_to_Keep__c</fullName>
    <label>Log Days to Keep</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>