unpackaged/main/default/objects/Integration__mdt/fields/Sync_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Sync_Date_Field__c</fullName>
    <label>Sync Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>